package net.civeira.phylax.features.access.usergroupmembership.domain;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.Optional;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.NonNull;
import lombok.ToString;
import lombok.With;
import lombok.experimental.Delegate;
import net.civeira.phylax.common.exception.ConstraintException;
import net.civeira.phylax.common.value.validation.ConstraintFailList;
import net.civeira.phylax.features.access.usergroupmembership.domain.event.UserGroupMembershipCreateEvent;
import net.civeira.phylax.features.access.usergroupmembership.domain.event.UserGroupMembershipDeleteEvent;
import net.civeira.phylax.features.access.usergroupmembership.domain.event.UserGroupMembershipEvent;
import net.civeira.phylax.features.access.usergroupmembership.domain.event.UserGroupMembershipUpdateEvent;
import net.civeira.phylax.features.access.usergroupmembership.domain.valueobject.GroupsVO;
import net.civeira.phylax.features.access.usergroupmembership.domain.valueobject.RelyingPartyVO;
import net.civeira.phylax.features.access.usergroupmembership.domain.valueobject.TrustedClientVO;
import net.civeira.phylax.features.access.usergroupmembership.domain.valueobject.UidVO;
import net.civeira.phylax.features.access.usergroupmembership.domain.valueobject.UserVO;
import net.civeira.phylax.features.access.usergroupmembership.domain.valueobject.VersionVO;

/**
 * user-group-membership
 */
@Builder
@Getter
@With
@ToString
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@EqualsAndHashCode
public class UserGroupMembership implements UserGroupMembershipRef {

  /**
   * Prepare a new user group membership with the provided values
   *
   * @autogenerated EntityGenerator
   * @param change A set of values to create a new user group membership
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A well formed user group membership.
   */
  public static UserGroupMembership create(final UserGroupMembershipChangeSet change)
      throws ConstraintException {
    UserGroupMembership instance = new UserGroupMembership(change, Optional.empty());
    instance.addEvent(UserGroupMembershipCreateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * El groups de user group membership
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private GroupsVO groupsValue = GroupsVO.nullValue();

  /**
   * List of events
   *
   * @autogenerated EntityGenerator
   */
  @Builder.Default
  private List<UserGroupMembershipEvent> recordedEvents = List.of();

  /**
   * El relying party de user group membership
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private RelyingPartyVO relyingPartyValue = RelyingPartyVO.nullValue();

  /**
   * El trusted client de user group membership
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private TrustedClientVO trustedClientValue = TrustedClientVO.nullValue();

  /**
   * El identificador de la aplicacion
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UidVO uidValue;

  /**
   * El user de user group membership
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UserVO userValue;

  /**
   * Campo con el número de version de user group membership para controlar bloqueos optimistas
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private VersionVO versionValue = VersionVO.nullValue();

  /**
   * @autogenerated EntityGenerator
   * @param attribute
   * @param previous
   */
  private UserGroupMembership(final UserGroupMembershipChangeSet attribute,
      final Optional<UserGroupMembership> previous) {
    ConstraintFailList list = new ConstraintFailList();
    this.uidValue = attribute.readUid(previous, list);
    this.userValue = attribute.readUser(previous, list);
    this.relyingPartyValue = attribute.readRelyingParty(previous, list);
    this.trustedClientValue = attribute.readTrustedClient(previous, list);
    this.groupsValue = attribute.readGroups(previous, list);
    this.versionValue = attribute.readVersion(previous, list);
    if (list.hasErrors()) {
      throw new ConstraintException("Invalid values on UserGroupMembership", list);
    }
    this.recordedEvents = previous.map(UserGroupMembership::getRecordedEvents).orElseGet(List::of);
  }

  /**
   * Apply changes to delete a user group membership
   *
   * @autogenerated EntityGenerator
   * @return A instance of user group membership ready to be deleted
   */
  public UserGroupMembership delete() {
    UserGroupMembership instance =
        new UserGroupMembership(new UserGroupMembershipChangeSet(), Optional.of(this));
    instance.addEvent(UserGroupMembershipDeleteEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public Map<String, String> toMap() {
    Map<String, String> map = new HashMap<>(6);
    uidToMap(map);
    userToMap(map);
    relyingPartyToMap(map);
    trustedClientToMap(map);
    groupsToMap(map);
    versionToMap(map);
    return map;
  }

  /**
   * Modify the values for some of the properties of a user group membership
   *
   * @autogenerated EntityGenerator
   * @param change The properties to be modified
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A modified instance of user group membership
   */
  public UserGroupMembership update(final UserGroupMembershipChangeSet change)
      throws ConstraintException {
    UserGroupMembership instance = new UserGroupMembership(change, Optional.of(this));
    instance.addEvent(UserGroupMembershipUpdateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public UserGroupMembership withNextVersion() {
    return withVersionValue(VersionVO.from(nextVersion()));
  }

  /**
   * @autogenerated EntityGenerator
   * @param event
   */
  private void addEvent(final UserGroupMembershipEvent event) {
    List<UserGroupMembershipEvent> events = new ArrayList<>(this.recordedEvents);
    events.add(event);
    this.recordedEvents = List.copyOf(events);
  }
}
